--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,14 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<body>
+  <% flash.collect do |key, message| %>
+    <%= content_tag :div, message, :id => "flash_message", :class => key %>
+  <% end.join.html_safe %>
+
+  <%= yield %>
 
 </body>
+
 </html>
