--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,4 +1,19 @@
 <%= form_for @todo_list do |f| %>
+  <% if @todo_list.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= @todo_list.errors.count %> error(s) prohibited this
+        <%= @todo_list.class.model_name.human %> from being saved:
+      </h2>
+
+      <ul>
+      <% @todo_list.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.submit %>
