User can create todo list with 4 static items

--- a/app/views/todo_lists/_todo_list.html.erb
+++ b/app/views/todo_lists/_todo_list.html.erb
@@ -1,3 +1,12 @@
 <div class="todo_list">
   <%= todo_list.name %>
+  <% unless todo_list.items.empty? %>
+    <ul class="todo_list_items">
+      <% todo_list.items.each do |item| %>
+        <li><%= item.name %></li>
+      <% end %>
+    </ul>
+  <% end %>
 </div>
+
+<hr/>
