--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,6 +1,17 @@
 <%= form_for @todo_list do |f| %>
   <%= error_messages_for @todo_list %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+
+  <div>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+
+  <div id="todo_list_items">
+    <h3>Items</h3>
+    <%= f.fields_for :items, @todo_list.items do |items_form| %>
+      <%= render :partial => "item", :locals => { :f => items_form } %>
+    <% end %>
+  </div>
+
   <%= f.submit %>
 <% end %>
