User can create a todo list adding items dinamically

--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -8,9 +8,15 @@
 
   <div id="todo_list_items">
     <h3>Items</h3>
+
     <%= f.fields_for :items, @todo_list.items do |items_form| %>
       <%= render :partial => "item", :locals => { :f => items_form } %>
     <% end %>
+
+    <div>
+      <%= add_child_link "Add item", :items %>
+      <%= new_child_fields_template(f, :items)%>
+    </div>
   </div>
 
   <%= f.submit %>
