User can remove items from a todo list

--- a/app/views/todo_lists/_item.html.erb
+++ b/app/views/todo_lists/_item.html.erb
@@ -1,3 +1,4 @@
-<div class="todo_list_item">
+<div class="field todo_list_item">
   <%= f.text_field :name %>
+  <%= remove_child_link "remove", f %>
 </div>
