--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+  <div id="user_nav">
+    <% if user_signed_in? %>
+      Signed in as <%= link_to current_user.email, edit_user_registration_path %>. Not you?
+      <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> or
+      <%= link_to "Sign in", new_user_session_path %>
+    <% end %>
+  </div>
+
   <% flash.collect do |key, message| %>
     <%= content_tag :div, message, :id => "flash_message", :class => key %>
   <% end.join.html_safe %>
