--- a/app/views/todo_lists/_task.html.erb
+++ b/app/views/todo_lists/_task.html.erb
@@ -1,4 +1,4 @@
-<div class="field todo_list_item">
+<div class="field task_field">
   <%= f.text_field :name %>
   <%= remove_child_link "remove", f %>
 </div>
