--- a/app/views/todo_lists/_todo_list.html.erb
+++ b/app/views/todo_lists/_todo_list.html.erb
@@ -1,9 +1,9 @@
 <div class="todo_list">
   <%= todo_list.name %>
-  <% unless todo_list.items.empty? %>
-    <ul class="todo_list_items">
-      <% todo_list.items.each do |item| %>
-        <li><%= item.name %></li>
+  <% unless todo_list.tasks.empty? %>
+    <ul class="tasks">
+      <% todo_list.tasks.each do |task| %>
+        <li><%= task.name %></li>
       <% end %>
     </ul>
   <% end %>
