--- a/app/views/user/todo_lists/_todo_list.html.erb
+++ b/app/views/user/todo_lists/_todo_list.html.erb
@@ -1,5 +1,5 @@
 <div class="todo_list">
-  <%= todo_list.name %>
+  <div><%= todo_list.name %> <%= visibility(todo_list) %></div>
   <% unless todo_list.tasks.empty? %>
     <ul class="tasks">
       <% todo_list.tasks.each do |task| %>
