Resources todo_lists and watched_lists are no longer nested within 'user'.

--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:user, @todo_list] do |f| %>
+<%= form_for @todo_list do |f| %>
   <%= error_messages_for @todo_list %>
 
   <div class="field">
