--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
   <div id="user_nav">
     <% if user_signed_in? %>
-      Signed in as <%= link_to current_user.email, edit_user_registration_path %>. Not you?
+      Signed in as <%= image_tag current_user.avatar_url %> <%= link_to current_user.email, edit_user_registration_path %>. Not you?
       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
     <% else %>
       <%= link_to "Sign up", new_user_registration_path %> or
