--- a/app/views/todo_lists/_task.html.erb
+++ b/app/views/todo_lists/_task.html.erb
@@ -1,4 +1,4 @@
-<div class="field task_field">
-  <%= f.text_field :name %>
+<div class="task_field">
+  <%= f.input :name, :label => false %>
   <%= remove_child_link "remove", f %>
 </div>
