--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,24 +1,16 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :multipart => true }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name,
+                              :url => registration_path(resource_name),
+                              :html => { :method => :put, :multipart => true }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :avatar %><br />
-  <%= f.file_field :avatar %></div>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
+  <%= f.input :email, :as => :email %>
+  <%= f.input :avatar, :as => :file %>
+  <%= f.input :password, :as => :password, :hint => "(leave blank if you don't want to change it)" %>
+  <%= f.input :password_confirmation, :as => :password %>
+  <%= f.input :current_password, :as => :password, :hint => "(we need your current password to confirm your changes)" %>
+  <%= f.button :submit %>
 <% end %>
 
 <h3>Cancel my account</h3>
