Added acceptance tests for watched lists

--- a/app/views/public_todo_lists/_public_todo_list.html.erb
+++ b/app/views/public_todo_lists/_public_todo_list.html.erb
@@ -1,5 +1,5 @@
-<div class="todo_list">
-  <div>
+<div id="<%= dom_id(public_todo_list) %>" class="todo_list">
+  <div class="name">
     <%= public_todo_list.name %> <%= toggle_watching public_todo_list %>
   </div>
 
