--- a/app/views/todo_lists/_todo_list.html.erb
+++ b/app/views/todo_lists/_todo_list.html.erb
@@ -1,5 +1,5 @@
-<div class="todo_list">
-  <div><%= todo_list.name %> <%= visibility(todo_list) %></div>
+<div id="<%= dom_id(todo_list) %>" class="todo_list">
+  <div><%= todo_list.name %> <%= visibility(todo_list) %> <%= link_to "(Remove)", todo_list_path(todo_list), :method => :delete, :confirm => "Are you sure?", :id => "remove_todo_list_#{todo_list.id}" %></div>
   <% unless todo_list.tasks.empty? %>
     <ul class="tasks">
       <% todo_list.tasks.each do |task| %>
