--- a/app/assets/stylesheets/todo_lists.css.scss
+++ b/app/assets/stylesheets/todo_lists.css.scss
@@ -1,3 +1,39 @@
-// Place all the styles related to the User::TodoLists controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div.todo_list {
+
+  margin-bottom: 1em;
+
+  h3 {
+
+    color: #444;
+    font-size: 1.2em;
+    letter-spacing: -.075em;
+
+    a {
+      font-size: .6em;
+    }
+    
+  }
+
+  ul.tasks {
+
+    li {
+      border-bottom: 1px solid #EEE;
+      padding-left: .75em;
+      
+    }
+
+  }
+
+}
+
+form {
+
+  div.task_field  {
+
+    div.input {
+      float: left;
+    }
+
+  }
+
+}
