--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Todo</title>
   <%= stylesheet_link_tag    "application" %>
@@ -10,18 +11,8 @@
 <body>
 
   <div id="container">
-    <div id="user_nav">
-      <% if user_signed_in? %>
-        Signed in as <%= image_tag current_user.avatar.thumb.url %> <%= link_to current_user.email, edit_user_registration_path %>. Not you?
-        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-      <% else %>
-        <%= link_to "Sign up", new_user_registration_path %> or
-        <%= link_to "Sign in", new_user_session_path %>
-      <% end %>
-    </div>
-
+    <%= render :partial => "shared/user_nav" %>
     <%= flash_messages %>
-
     <%= yield %>
   </div>
 
