--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,19 +1,66 @@
 div#container {
-  background-color: white;
   width: 35em;
   margin: 1em auto;
-  padding: 1em;
 }
 
-div#user_nav {
-  font-size: .75em;
-  text-align: right;
+div#header {
+
+  div#app_name {
+    font-size: 1.4em;
+    float: left;
+    width: 30%;
+  }
+
+  div#user_nav {
+    float: right;
+    font-size: .65em;
+    text-align: right;
+    width: 70%;
+  }
+
 }
 
-h1 {
-  color: black;
-  font-size: 2.4em;
-  font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
-  line-height: 1.4em;
-  letter-spacing: -.05em;
+div#menu {
+
+  border: 1px solid #AAA;
+  border-width: 1px 0;
+
+
+  ul li {
+    display: left;
+    float: left;
+
+    a {
+      background-color: #DDD;
+      color: #999;
+      display: block;
+      font-size: .9em;
+      font-weight: bold;
+      float: left;
+      padding: 10px 14px;
+      text-transform: uppercase;
+    }
+  }
+
+  div#new_todo_list {
+    float: right;
+
+    a {
+      display:block;
+      font-size: .75em;
+      border: 1px solid #AAA;
+      margin: .6em .6em 0 0;
+      padding: .15em .65em;
+    }
+  }
+
+}
+
+div#content {
+  background-color: white;
+}
+
+div#footer {
+  text-align: center;
+  font-size: .65em;
 }
