Added page title helper

--- a/app/views/public_todo_lists/index.html.erb
+++ b/app/views/public_todo_lists/index.html.erb
@@ -1,3 +1,5 @@
+<% title "Public todo lists", :show => false %>
+
 <div id="todo_lists">
   <%= render :partial => "public_todo_list", :collection => @public_todo_lists %>
 </div>
