--- a/app/views/watched_lists/index.html.erb
+++ b/app/views/watched_lists/index.html.erb
@@ -1,3 +1,5 @@
+<% title "Watched lists", :show => false %>
+
 <div id="todo_lists">
   <%= render :partial => "watched_list", :collection => @watched_lists %>
 </div>
