--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <div id="container">
 
     <div id="header" class="clearfix">
-      <div id="app_name">Todo APP</div>
+      <div id="app_name"><%= APP_NAME %></div>
       <%= render :partial => "shared/user_nav" %>
     </div>
 
@@ -35,7 +35,7 @@
       <%= yield %>
     </div>
 
-    <div id="footer">Todo APP &copy; 2011</div>
+    <div id="footer"><%= APP_NAME %> &copy; 2011</div>
   </div>
 
 </body>
