--- a/app/views/todo_lists/_todo_list.html.erb
+++ b/app/views/todo_lists/_todo_list.html.erb
@@ -1,10 +1,25 @@
 <div id="<%= dom_id(todo_list) %>" class="todo_list">
-  <h3>
-    <%= todo_list.name %>
-    <%= visibility(todo_list) %>
-    <%= link_to "(Edit)", edit_todo_list_path(todo_list), :id => "edit_todo_list_#{todo_list.id}" %>
-    <%= link_to "(Remove)", todo_list_path(todo_list), :method => :delete, :confirm => "Are you sure?", :id => "remove_todo_list_#{todo_list.id}" %>
-    </h3>
+  <div class="header">
+    <div class="visibility">
+      <%= visibility(todo_list) %>
+    </div>
+
+    <div class="clearfix">
+      <div class="avatar">
+        <%= image_tag todo_list.user.avatar_url %>
+      </div>
+
+      <div class="info">
+        <h3><%= todo_list.name %></h3>
+        <div class="actions">
+          <span class="timestamp"><%= time_ago_in_words(todo_list.created_at) %></span>
+          <%= link_to "(Edit)", edit_todo_list_path(todo_list), :id => "edit_todo_list_#{todo_list.id}", :class => "edit",  %> | 
+          <%= link_to "(Remove)", todo_list_path(todo_list), :method => :delete, :confirm => "Are you sure?", :id => "remove_todo_list_#{todo_list.id}", :class => "destroy" %>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <% unless todo_list.tasks.empty? %>
     <ul class="tasks">
       <% todo_list.tasks.each do |task| %>
