Added style to tasks.

--- a/app/views/todo_lists/_task.html.erb
+++ b/app/views/todo_lists/_task.html.erb
@@ -1,4 +1,4 @@
 <div class="task_field">
   <%= f.input :name, :label => false %>
-  <%= remove_child_link "remove", f %>
+  <%= remove_child_link image_tag("remove.png"), f %>
 </div>
