--- a/app/assets/stylesheets/todo_lists.css.scss
+++ b/app/assets/stylesheets/todo_lists.css.scss
@@ -38,7 +38,7 @@ div.todo_list {
     li {
       border-bottom: 1px solid #EEE;
       padding-left: .75em;
-      
+      list-style: square inside;
     }
 
   }
@@ -47,6 +47,43 @@ div.todo_list {
 
 form {
 
+  padding: 0 2.5em 2.5em;
+
+  label abbr {
+    color: red;
+  }
+
+  label {
+    display: block;
+  }
+
+  div.input.boolean label {
+    display: inline;
+  }
+
+  input#todo_list_name {
+    font-size: 1.6em;
+    font-weight: bold;
+    width: 15em;
+  }
+
+  input.button {
+    font-size: 1em;
+  }
+
+  div#tasks {
+
+    border-bottom: 1px solid #DDD;
+    padding-bottom: 1em;
+    margin: 1em 0;
+
+    a.add_child {
+      background: url("add.png") no-repeat;
+      padding-left: 1.2em;
+    }
+
+  }
+
   div.task_field  {
 
     div.input {
@@ -54,5 +91,7 @@ form {
     }
 
   }
+
+  
 
 }
