CSS for span.error

--- a/app/assets/stylesheets/todo_lists.css.scss
+++ b/app/assets/stylesheets/todo_lists.css.scss
@@ -62,6 +62,12 @@ form {
     display: inline;
   }
 
+  span.error {
+    display: block;
+    color: red;
+    font-size: .7em;
+  }
+
   input#todo_list_name {
     font-size: 1.6em;
     font-weight: bold;
