--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -60,11 +60,38 @@ div#menu {
     float: right;
 
     a {
-      display:block;
+      color: #FFF;
+      font-family: Helvetica,Arial,sans-serif;
       font-size: .75em;
+      font-weight: bold;
+      text-decoration: none;
+      display:block;
       margin: .6em .6em 0 0;
-      padding: .15em .65em;
-    }
+      padding: .15em .85em;
+      background: -moz-linear-gradient(
+            top,
+            #10c200 0%,
+            #5bb32e 75%,
+            #118a11);
+      background: -webkit-gradient(
+            linear, left top, left bottom,
+            from(#10c200),
+            color-stop(0.75, #5bb32e),
+            to(#118a11));
+      border-radius: 6px;
+      -moz-border-radius: 6px;
+      -webkit-border-radius: 6px;
+      border: 0px solid #2ea100;
+      -moz-box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px 0px 3px rgba(68,102,4,1);
+      -webkit-box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px 0px 3px rgba(68,102,4,1);
+      text-shadow:
+            0px 0px 0px rgba(255,240,255,0.2),
+            1px 1px 0px rgba(110,125,107,1);
+      }
   }
 
 }
