Changed CSS for flash messages

--- a/app/assets/stylesheets/flash_messages.css.scss
+++ b/app/assets/stylesheets/flash_messages.css.scss
@@ -1,8 +1,10 @@
 .flash_message
 {
   border: 1px solid;
-  padding: .4em;
-  // padding-left: 2.6em;
+  width: 60%;
+  margin: 0 auto 2em;
+  text-align: center;
+  font-size: .65em;
 }
 
 #flash_notice
