Added name for user

--- a/app/views/shared/_user_nav.html.erb
+++ b/app/views/shared/_user_nav.html.erb
@@ -1,6 +1,6 @@
 <div id="user_nav">
   <% if user_signed_in? %>
-    Signed in as <%= image_tag current_user.avatar.thumb.url %> <%= link_to current_user.email, edit_user_registration_path %>. Not you?
+    Welcome, <%= image_tag current_user.avatar.thumb.url %> <%= link_to current_user, edit_user_registration_path %>! Not you?
     <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
   <% else %>
     <%= link_to "Sign up", new_user_registration_path %> or
