--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
                               :url => registration_path(resource_name),
                               :html => { :method => :put, :multipart => true }) do |f| %>
   <%= devise_error_messages! %>
-
+  <%= f.input :name %>
   <%= f.input :email, :as => :email %>
   <%= f.input :avatar, :as => :file %>
   <%= f.input :password, :as => :password, :hint => "(leave blank if you don't want to change it)" %>
