--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :multipart => true }) do |f| %>
   <%= devise_error_messages! %>
+  <%= f.input :name %>
   <%= f.input :email, :as => :email %>
   <%= f.input :avatar, :as => :file  %>
   <%= f.input :password, :as => :password %>
