--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,11 @@
 <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.input :email, :as => :email %>
-  <%= f.button :submit, "Send me reset password instructions" %>
+  <div class="submit">
+    <%= f.button :submit, "Send me reset password instructions" %>
+  </div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<div id="devise_links">
+  <%= link_to "Sign in", new_session_path(resource_name) %> or <%= link_to "Sign up", new_registration_path(resource_name) %>
+</div>
