--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,3 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <%= simple_form_for(resource, :as => resource_name,
                               :url => registration_path(resource_name),
                               :html => { :method => :put, :multipart => true }) do |f| %>
@@ -10,11 +8,17 @@
   <%= f.input :password, :as => :password, :hint => "(leave blank if you don't want to change it)" %>
   <%= f.input :password_confirmation, :as => :password %>
   <%= f.input :current_password, :as => :password, :hint => "(we need your current password to confirm your changes)" %>
-  <%= f.button :submit %>
+  <div class="submit">
+    <%= f.button :submit %>
+  </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<div id="cancel_account">
+  <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+  <p>
+    Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.
+  </p>
+</div>
 
-<%= link_to "Back", :back %>
+
