--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,11 @@
   <%= f.input :avatar, :as => :file  %>
   <%= f.input :password, :as => :password %>
   <%= f.input :password_confirmation, :as => :password %>
-  <%= f.button :submit, "Sign in" %>
+  <div class="submit">
+    <%= f.button :submit, "Sign in" %>
+  </div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<div id="devise_links">
+  Already registered? <%= link_to "Sign in", new_session_path(resource_name) %>
+</div>
