--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -102,5 +102,11 @@ div#menu {
 
 div#content {
   background-color: white;
-  padding-top:1em;
+  padding:1em 0;
+}
+
+p.empty {
+  margin: 1.5em;
+  padding: 1em;
+  background-color: #f4feed;
 }
