--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -37,12 +37,17 @@ div#menu {
     a {
       color: #999;
       display: block;
-      font-size: .9em;
+      font-size: .7em;
       font-weight: bold;
       float: left;
-      padding: 10px 14px;
+      line-height: 3em;
+      padding: 0 10px;
       text-transform: uppercase;
       text-decoration: none;
+
+      &:hover {
+        color: #33825f;
+      }
     }
   }
 
@@ -51,12 +56,12 @@ div#menu {
     a {
       color: #000;
       background-color: #FFF;
-      -webkit-border-top-left-radius: 8px;
-      -webkit-border-top-right-radius: 8px;
-      -moz-border-radius-topleft: 8px;
-      -moz-border-radius-topright: 8px;
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
+      // -webkit-border-top-left-radius: 8px;
+      // -webkit-border-top-right-radius: 8px;
+      // -moz-border-radius-topleft: 8px;
+      // -moz-border-radius-topright: 8px;
+      // border-top-left-radius: 8px;
+      // border-top-right-radius: 8px;
     }
 
   }
@@ -66,12 +71,13 @@ div#menu {
 
     a {
       color: #FFF;
-      font-size: .75em;
+      font-size: .6em;
       font-weight: bold;
       text-decoration: none;
       display:block;
-      margin: .6em .6em 0 0;
-      padding: .15em .85em;
+      line-height: 2.5em;
+      // margin: .6em .6em 0 0;
+      padding: 0 .85em;
       background: -moz-linear-gradient(
             top,
             #10c200 0%,
@@ -82,9 +88,9 @@ div#menu {
             from(#10c200),
             color-stop(0.75, #5bb32e),
             to(#118a11));
-      border-radius: 6px;
-      -moz-border-radius: 6px;
-      -webkit-border-radius: 6px;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
       border: 0px solid #2ea100;
       -moz-box-shadow:
             0px 1px 3px rgba(000,000,000,0.5),
